<resources>
    <string name="app_name">Binger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_address">Address</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_checkout">Check Out</string>

    <string name="default_button">Default</string>
    <string name="addCardTxt">Add Card</string>
    <string name="cardNumTxt">Card Number</string>
    <string name="expiryDateTxt">Expiry Date</string>
    <string name="cvcTxt">CVC</string>
    <string name="holderNameTxt">Card Holder Name</string>
    <string name="addButton">ADD</string>

    <string name="addAddressTxt">Add Address</string>
    <string name="addressLineTxt">Address line</string>
    <string name="postalCodeTxt">Postal Code</string>
    <string name="cityTxt">City</string>
    <string name="doorNumTxt">Floor/Unit No.</string>
    <string name="addressNameTxt">Name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PickUp">Pick Up</string>
    <string name="Delivery">Delivery</string>
    <string name="checkOut">Check Out</string>
    <string name="selectButton">Select</string>


    <!-- ChekPing-->
    <string name="login_button">Login</string>

    <string name="Forgotpass">Forgot Password</string>
    <string name="ForgotpassDec">Enter your email and we will send you a link to reset your password. </string>

    <string name="sign_up_buttom">Sign-Up</string>
    <string name="logo">TODO</string>
    <string name="contact_number">Contact Number</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="submit_button">Submit</string>
    <string name="siguppic">TODO</string>
    <string name="login_password">Password</string>
    <string name="loginpic">TODO</string>
    <string name="loginpic2">TODO</string>
    <string name="login_name">UserName</string>
    <string name="loginpic3">TODO</string>
    <string name="bg">TODO</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bgsignup">TODO</string>
    <string name="settingbut" />
    <string name="contactuser">TextView</string>
    <string name="username_user">Textview</string>
    <string name="user_age_user">TextView</string>
    <string name="user_pro">TODO</string>
    <string name="user_bg">TODO</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="map_api_key">AIzaSyBzuVq6wnf2ZmW4vVIloarmXT4e2_NqDpY</string>
</resources>