<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.binger.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_address"
        android:name="com.example.binger.ui.address.AddressFragment"
        android:label="@string/menu_address"
        tools:layout="@layout/fragment_address" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.binger.ui.paymentMethods.PaymentMethodFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_paymentmethod" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.binger.ui.address.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" />

</navigation>