<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.Payment"
    android:paddingBottom="10dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/addressCardView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress">

            <TextView
                android:id="@+id/defaultAddressNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp"
                android:translationX="80dp"
                android:translationY="15dp" />

            <TextView
                android:id="@+id/defaultAddressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="14sp"
                android:translationX="80dp"
                android:translationY="40dp" />

            <ImageView
                android:id="@+id/addressArrow"
                android:layout_width="36dp"
                android:layout_height="37dp"
                android:adjustViewBounds="true"
                android:src="@drawable/next_arrow"
                android:translationX="350dp"
                android:translationY="20dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="35dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_menu_address"
                android:translationX="25dp"
                android:translationY="15dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/menu_address"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/tvCustomerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/checkOut"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCustomerDetails"
            android:orientation="horizontal"
            android:checkedButton="@+id/radioButtonDelivery">

            <RadioButton
                android:id="@+id/radioButtonDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Delivery"
                android:padding="10dp" />

            <RadioButton
                android:id="@+id/radioButtonPickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PickUp"
                android:padding="10dp" />

        </RadioGroup>


        <TextView
            android:id="@+id/tvTotalItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Total items in cart"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paymentCardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalItems"
            android:nestedScrollingEnabled="false"/>

        <TextView android:id="@+id/tvSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemsRecyclerView"
            android:layout_margin="10dp"
            android:text="Sub total"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView android:id="@+id/tvSubtotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemsRecyclerView"
            android:layout_margin="10dp"
            android:text="$0.0"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView android:id="@+id/tvDeliveryCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtotal"
            android:layout_margin="10dp"
            android:text="Delivery Charge"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView android:id="@+id/tvDeliveryChargeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtotal"
            android:layout_margin="10dp"
            android:text="$0.0"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge"
            android:layout_margin="10dp"
            android:text="Total"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge"
            android:layout_margin="10dp"
            android:text="$0.0"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView android:id="@+id/buttonPlaceYourOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotal"
            android:text="Place your order"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_back"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/paymentCardView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPayment">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:src="@drawable/card"
                android:translationX="20dp"
                android:translationY="15dp" />

            <TextView
                android:id="@+id/defaultCardNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp"
                android:translationX="80dp"
                android:translationY="15dp" />

            <TextView
                android:id="@+id/defaultCardNumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="14sp"
                android:translationX="80dp"
                android:translationY="40dp" />

            <ImageView
                android:id="@+id/paymentArrow"
                android:layout_width="36dp"
                android:layout_height="37dp"
                android:adjustViewBounds="true"
                android:src="@drawable/next_arrow"
                android:translationX="350dp"
                android:translationY="20dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/menu_payment"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressCardView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>